# tdd_fetch

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: coverage.yml  pytest_coverage.yml  static.yml
app/: async_fetch.py  fetch.py
tests/: test_async_fetch.py  test_fetch.py
