[tool.poetry]
name = "tdd-fetch"
version = "0.1.0"
description = ""
authors = ["Arjun KayalMoni <arjun.umathanu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-env = "^1.1.3"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
