[tool.poetry]
name = "tdd-fetch"
version = "0.1.0"
description = ""
authors = ["Arjun KayalMoni <arjun.umathanu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-env = "^1.1.3"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"
pytest-httpx = "^0.28.0"
pytest-asyncio = "^0.23.3"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
env = [
    "APP_ENV=testing"
]
markers = [
    "smoke: marks tests as smoke (deselect with '-m \"not smoke\"')"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
